--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -2607,9 +2607,9 @@
                     <p class="program_data_title">Date</p>
                     <p class="program_data_value">
                       {{
-                        http_rpm_patientList &&
-                          http_rpm_patientList["PatientPrescribtionDetails"]
-                            .PrescribedDate | date : "MMM d, y"
+                         convertToLocalTime(
+                        http_rpm_patientList.PatientPrescribtionDetails.PrescribedDate
+                      ) | date : "mediumDate"
                       }}
                     </p>
                   </div>
