--- a/web/src/app/components/admin-dashboard/shared/side-bar/side-bar.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-bar/side-bar.component.html
@@ -38,7 +38,7 @@
         [backgroundImage]="item.icon"
       ></app-menu-item>
     </div>
-    <app-profile-menu-button></app-profile-menu-button>
+    <app-profile-menu-button (closeMenu)="toggleMenu()"></app-profile-menu-button>
   </ul>
 
 </div>
