--- a/web/src/app/components/admin-dashboard/components/dashboard_module/dashboard.component.html
+++ b/web/src/app/components/admin-dashboard/components/dashboard_module/dashboard.component.html
@@ -5,7 +5,7 @@
   </ng-container>
   <app-header (emitter)="toggleMenu($event)"></app-header>
   <mat-drawer mode="side" [opened]="true">
-    <app-side-bar class="sidebar"></app-side-bar>
+    <app-side-bar (emitter)="toggleMenu($event)" class="sidebar"></app-side-bar>
   </mat-drawer>
   <router-outlet></router-outlet>
 </mat-drawer-container>
