--- a/web/src/app/components/admin-dashboard/components/admin/admin.component.scss
+++ b/web/src/app/components/admin-dashboard/components/admin/admin.component.scss
@@ -996,7 +996,12 @@
 }
 .text-danger {
   color: #a20d0a;
-  padding-left:16px;
+}
+.SmallFormMessage {
+  font-size: 0.6rem;
+  text-align: left;
+  height: 0.4rem;
+  padding-left: 0.8rem;
 }
 input {
   outline: none;
@@ -1196,6 +1201,6 @@ mat-progress-spinner {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px; /* Adjust based on your design needs */
+  max-width: 300px; /* Adjust based on your design needs */
   padding: 0 8px; /* Add some padding for better spacing */
 }
