--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -3148,6 +3148,7 @@
               />
             </div>
           </div>
+          <span class="err" *ngIf="pdfTypeStatus">Please Select a Pdf Document</span>
         </div>
       </div>
 
