--- a/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
@@ -41,7 +41,7 @@
 <div class="profile-button-panel-tab">
   <div class="logout_panel_button-tab">
     <div class="profilename-panel">
-      <span class="profilename" (click)="profile()">{{ profileName }}</span>
+      <span class="profilename" title="My Profile" (click)="profile()">{{ profileName }}</span>
     </div>
     <div class="logout_user_data">
       <p class="logout-user-name-data">{{ userName }}</p>
