merge_manifest removed and bugfix

--- a/web/src/app/components/admin-dashboard/components/admin/admin.component.scss
+++ b/web/src/app/components/admin-dashboard/components/admin/admin.component.scss
@@ -1206,3 +1206,9 @@ mat-progress-spinner {
   max-width: 300px; /* Adjust based on your design needs */
   padding: 0 8px; /* Add some padding for better spacing */
 }
+.SmallFormMessage {
+  font-size: 0.6rem;
+  text-align: left;
+  height: 0.4rem;
+  padding-left: 0.8rem;
+}
