--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -2488,7 +2488,7 @@
                     <p class="program_data_value">
                       {{
                         http_rpm_patientList["PatientProgramdetails"].Duration
-                      }}
+                      }} Months
                     </p>
                   </div>
                 </div>
