--- a/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
@@ -324,6 +324,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('PatientName')"
                   [value]="patientSearch"
+                  autocomplete="off"
                 />
               </div>
               <div class="search_heading_default" *ngIf="!searchPatientList_Name">
@@ -361,6 +362,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('ProgramName')"
                   [value]="programSearch"
+                  autocomplete="off"
                 />
               </div>
                <div class="search_heading_default" *ngIf="!searchProgram_Name">
@@ -418,6 +420,7 @@
                   (keyup)="applyDataFilter($event)"
                   (focus)="setupFilter('PhysicianName')"
                   [value]="phySearchValue"
+                  autocomplete="off"
                 />
               </div>
               <div
@@ -463,6 +466,7 @@
                     id="p_ClinicSearchInput"
                     (focus)="setupFilter('ClinicName')"
                     [value]="clinicNameSerach"
+                    autocomplete="off"
                   />
                 </div>
                 <div
@@ -516,6 +520,7 @@
                   id="p_AssignedSearchInput"
                   (focus)="setupFilter('AssignedMember')"
                   [value]="assigneeSerach"
+                  autocomplete="off"
                 />
               </div>
               <div
@@ -941,11 +946,18 @@
                 class="search_icon"
                 src="../../../../../assets/04-Icons/Icons_Cancel.svg"
                 (click)="searchAssigneeClose()"
-              /><input
+              />
+              <!-- <input
                 class="search_input input_panel"
                 [(ngModel)]="billingAssigneeName"
                 (keyup.enter)="billingDataFilter()"
-              />
+              /> -->
+              <input
+                  class="search_input input_panel"
+                  (keyup)="applyDataFilter($event)"
+                  id="p_AssignedSearchInput"
+                  (focus)="setupFilter('AssignedMemeber')"
+                  [value]="assigneeSerach" autocomplete="off"/>
             </div>
             <div
               class="search_heading_default"
