--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -279,7 +279,7 @@
               <section
                 class="progrssbar_container"
                 [ngClass]="
-                  patientInteractionMin > colorcodeval ? 'completed-target' : ''
+                  patientInteractionMin > colorcodeval ? 'completed-target' : 'progress-target'
                 "
               >
                 <!-- <mat-progress-bar
