--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/program-renew/program-renew.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/program-renew/program-renew.component.html
@@ -20,7 +20,7 @@
           <input
             class="common_input_dropdown"
             type="date"
-            [attr.disabled]="true"
+            [readonly]="true"
             formControlName="pgmendDate"
             id="pd_RenewEnd"
           />
