--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -276,17 +276,13 @@
                     src="../../../../../assets/refresh.png"
                 /></span>
               </div>
-              <section
+              <!-- <section
                 class="progrssbar_container"
                 [ngClass]="
                   patientInteractionMin > colorcodeval ? 'completed-target' : 'progress-target'
                 "
               >
-                <!-- <mat-progress-bar
-                  mode="determinate"
-                  strokeWidth="10"
-                  value="{{ interactionpercentValue }}"
-                ></mat-progress-bar> -->
+
                 <div class="custom-progress-bar-outer">
                   <div
                     class="custom-progress-bar-inner"
@@ -307,6 +303,28 @@
                 >
                   {{ patientInteractionMin }}:{{ patientInteractionSec }} /
 
+                  {{ totalInteractionTime }} min
+                </div>
+              </section> -->
+              <section
+                class="progrssbar_container"
+                [ngClass]="patientInteractionMin > colorcodeval ? 'completed-target' : ''"
+              >
+                <!-- Custom Progress Bar -->
+                <div class="custom-progress-bar-outer">
+                  <div
+                    class="progress-fill-data"
+                    [style.width.%]="interactionpercentValue > 100 ? 100 : interactionpercentValue"
+                  ></div>
+                </div>
+
+                <!-- Time display -->
+                <div *ngIf="interactionpercentValue > 100" class="progressvalue">
+                  {{ patientInteractionMin }}:{{ patientInteractionSec }}
+                </div>
+
+                <div *ngIf="interactionpercentValue <= 100" class="progressvalue">
+                  {{ patientInteractionMin }}:{{ patientInteractionSec }} /
                   {{ totalInteractionTime }} min
                 </div>
               </section>
