--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -521,7 +521,7 @@ p {
   align-items: center;
   height: fit-content;
   position: relative;
-  // background-color: #edeff5;
+  // background-color: #223e92;
   padding: 2px;
   border-radius: 20px;
   width: 100%;
@@ -3609,7 +3609,7 @@ li + li {
   border-radius: 5px;
 }
 .progress-fill-success {
-  background-color: #6da86f;
+  background-color: #6da86f !important;
   height: 100%;
 
   transition: width 0.3s ease-in-out;
@@ -3662,9 +3662,11 @@ li + li {
   background-color: #6da86f !important;
   /* Green for completed */
 }
-.progress-target .custom-progress-bar-inner {
-  background-color: hsl(40, 74%, 60%) !important;
-  /* Green for completed */
+
+.progress-fill-data {
+  height: 100%;
+  background-color:  hsl(40, 74%, 60%) ; /* progress color */
+  transition: width 0.3s ease; /* smooth animation */
 }
 /* Timer label */
 .progressvalue {
