chat-panel-design-change

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
@@ -82,7 +82,7 @@
               <p>Chats</p>
               <img
                 class="chaticon"
-                src="../../../../../assets/04-Icons/Icons_Cancel A.svg"
+                src="../../../../../assets/04-Icons/Icons_Cancel.svg"
                 (click)="closeChatPanel()"
               />
             </div>
