--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -2846,14 +2846,14 @@
         <div class="button">
           <button
             id="editfailCancelOk"
-            class="edit_cancel"
+            class="btn_cancel"
             [mat-dialog-close]="true"
           >
             CANCEL
           </button>
           <button
             id="editfailConfirmOk"
-            class="edit_save"
+            class="btn_save"
             (click)="redirect_patient()"
           >
             OK
